--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   },
   "scripts": {
     "lint": "eslint .",
-    "lint:fix": "npm run lint -- --fix"
+    "lint:fix": "npm run lint -- --fix",
+    "prepare": "husky"
   },
   "devDependencies": {
     "@sequencemedia/eslint-config-standard": "^0.2.52",
@@ -23,5 +24,8 @@
     "@types/node": "^22.15.3",
     "eslint": "^9.26.0",
     "globals": "^16.0.0"
+  },
+  "dependencies": {
+    "husky": "^9.1.7"
   }
 }
