--- a/package.json
+++ b/package.json
@@ -27,5 +27,10 @@
     "@types/node": "^22.15.3",
     "eslint": "^9.26.0",
     "globals": "^16.0.0"
+  },
+  "exports": {
+    ".": "./index.mjs",
+    "./1": "./1.mjs",
+    "./2": "./2.mjs"
   }
 }
